   new command, docknot spin-text, which takes roughly the same options as
   faq2html.  This adds the ability to convert text files in my personal
   format into HTML.

 - Support *.spin pointers in addition to *.faq pointers for external text
   files.  *.faq files are deprecated and support will be removed in a
   future version of DocKnot.

 - Change the docknot.yaml field orphaned to unmaintained, and change the
   templates to say the package is not maintained instead of orphaned.
   This terminology is more precise and less metaphorical.

 - Remove support information from the README.md and README templates for
   packages that are no longer maintained, and adjust some of the wording
   there and in the thread template.

 - Add missing </address> closing tag in pages rendered from Markdown.

 - Fix typo in README.md template for ExtUtils::MakeMaker packages.

 - Fix the URL in the footer added by docknot spin to point to DocKnot
   instead of my old web tools page.

7.01 - 2022-01-19

 - Correctly handle Unicode output from commands run by pointers and from
   POD processing by Pod::Thread.  Previous versions since 6.01 were
   double-encoding.  Thanks to Julien ÉLIE for the report.

 - Follow symlinks to ordinary files in docknot spin, just not
   directories.  The Path::Iterator::Rule conversion in 6.01 broke copying
   of files referenced by symlink.

 - The \size spin always used 1024-based units.  It now correctly uses the
   KiB, MiB, etc. abbreviations to match.

7.00 - 2022-01-17

 - Various module APIs now take Path::Tiny objects instead of string
   paths.  Roughly, any module API that is not called directly by
   App::DocKnot::Command now expects paths in the form of Path::Tiny
   objects and does not always do an explicit conversion.

 - Fix Unicode handling in App::DocKnot::Spin::Thread methods.  Output to
   files was handled correctly in most cases, but output to a scalar or to