@@ -134,7 +134,7 @@ sub release {
         utime($atime, $mtime, $dest)
           or die "cannot reset timestamps of $dest: $!\n";
         my $generic_name = $file;
-        $generic_name =~ s{ \A (\Q$self->{tarname}\E) - [\d.]+ [.] }{$1.}xms;
+        $generic_name =~ s{ \A (\Q$self->{tarname}\E) - v?[\d.]+ [.] }{$1.}xms;
         my $generic_path = $current_path->child($generic_name);
         $generic_path->remove();
         symlink($file, $generic_path);
@@ -240,7 +240,7 @@ Russ Allbery <rra@cpan.org>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2022 Russ Allbery <rra@cpan.org>
+Copyright 2022, 2024 Russ Allbery <rra@cpan.org>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
